# backtesting

./: CMakeLists.txt  README.md  cross_ama.cpp  docs.md  hs300_60min.sqlite  parallel_params_cross_ama.cpp
backtesting/: .gitignore  cross_ama.cpp  parallel_params_cross_ama.cpp
backtesting/bt/: logger.h
backtesting/examples/: ama_params  task_params.py
bt/: api.h  broker.h  interface.h  plot.h  signal.h
examples/: ama_value  task_plot.py
pybt/: CMakeLists.txt  pybt.cpp
pybt/bt/: api.h  broker.h  data.h  plot.h  signal.h
utils/: ma.h
